chore: baseline dirty workspace before current node highlight